Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         <header id="banner" class="body">
                 <h1><a href="https://farmadeus.com/">Farmadeus </a></h1>
                 <nav><ul>
+                    <li><a href="https://farmadeus.com/pages/log.html">Log</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h2>Pages</h2>
+        <li><a href="https://farmadeus.com/pages/log.html">Log</a></li>
 </section>
         <section id="extras" class="body">
                 <div class="blogroll">
