--- a/archives.html
+++ b/archives.html
@@ -11,6 +11,7 @@
         <header id="banner" class="body">
                 <h1><a href="https://farmadeus.com/">Farmadeus </a></h1>
                 <nav><ul>
+                    <li><a href="https://farmadeus.com/pages/log.html">Log</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
