Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -11,13 +11,15 @@
         <header id="banner" class="body">
                 <h1><a href="https://farmadeus.com/">Farmadeus </a></h1>
                 <nav><ul>
-                    <li><a href="https://farmadeus.com/pages/log.html">Log</a></li>
+                    <li><a href="https://farmadeus.com/category/log.html">log</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Farmadeus</h1>
 
 <dl>
+    <dt>Wed 20 November 2019</dt>
+    <dd><a href="https://farmadeus.com/entry-7.html">Entry #7</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
