--- a/tags.html
+++ b/tags.html
@@ -11,7 +11,7 @@
         <header id="banner" class="body">
                 <h1><a href="https://farmadeus.com/">Farmadeus </a></h1>
                 <nav><ul>
-                    <li><a href="https://farmadeus.com/pages/log.html">Log</a></li>
+                    <li><a href="https://farmadeus.com/category/log.html">log</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
