Generate Pelican site

--- a/entry-7.html
+++ b/entry-7.html
@@ -34,6 +34,7 @@
 <p>In <a href="https://farmadeus.com/category/log.html">log</a>.</p>
 
 </footer><!-- /.post-info -->      <p>Planted 11 Shagbark Hickory seeds in air prune bed that was planted with American Hazelnut on November 10, 2019. Covered with straw mulch.</p>
+<p>Removed Antonovka Apple and Siberian Crab Apple from soaking and placed in refrigerator. Packed in moist paper towel due to small seed size.</p>
     </div><!-- /.entry-content -->
 
   </article>
