--- a/archives.html
+++ b/archives.html
@@ -20,6 +20,8 @@
 <dl>
     <dt>Wed 20 November 2019</dt>
     <dd><a href="https://farmadeus.com/entry-7.html">Entry #7</a></dd>
+    <dt>Tue 19 November 2019</dt>
+    <dd><a href="https://farmadeus.com/entry-6.html">Entry #6</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
