--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
     <dd><a href="https://farmadeus.com/entry-7.html">Entry #7</a></dd>
     <dt>Tue 19 November 2019</dt>
     <dd><a href="https://farmadeus.com/entry-6.html">Entry #6</a></dd>
+    <dt>Sun 17 November 2019</dt>
+    <dd><a href="https://farmadeus.com/entry-5.html">Entry #5</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
