--- a/entry-5.html
+++ b/entry-5.html
@@ -56,7 +56,7 @@
 <p>Sun 17 November 2019 </p>
 
 <p style="text-align: left;">
-Filed under <a href="https://farmadeus.com/category/log.html">log</a>
+Filed under <a href="https://farmadeus.com/category/log.html">Log</a>
 </p>
 <p style="text-align: left;">
 </p>
