--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,8 @@
     <dd><a href="https://farmadeus.com/entry-6.html">Entry #6</a></dd>
     <dt>Sun 17 November 2019</dt>
     <dd><a href="https://farmadeus.com/entry-5.html">Entry #5</a></dd>
+    <dt>Sun 17 November 2019</dt>
+    <dd><a href="https://farmadeus.com/farm-log-2019.html">Farm Log 2019</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
