Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -11,19 +11,13 @@
         <header id="banner" class="body">
                 <h1><a href="https://farmadeus.com/">Farmadeus </a></h1>
                 <nav><ul>
-                    <li><a href="https://farmadeus.com/category/log.html">log</a></li>
+                    <li><a href="https://farmadeus.com/category/logs.html">logs</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Farmadeus</h1>
 
 <dl>
-    <dt>Wed 20 November 2019</dt>
-    <dd><a href="https://farmadeus.com/entry-7.html">Entry #7</a></dd>
-    <dt>Tue 19 November 2019</dt>
-    <dd><a href="https://farmadeus.com/entry-6.html">Entry #6</a></dd>
-    <dt>Sun 17 November 2019</dt>
-    <dd><a href="https://farmadeus.com/entry-5.html">Entry #5</a></dd>
     <dt>Sun 17 November 2019</dt>
     <dd><a href="https://farmadeus.com/farm-log-2019.html">Farm Log 2019</a></dd>
 </dl>
