--- a/authors.html
+++ b/authors.html
@@ -11,14 +11,14 @@
         <header id="banner" class="body">
                 <h1><a href="https://farmadeus.com/">Farmadeus </a></h1>
                 <nav><ul>
-                    <li><a href="https://farmadeus.com/category/log.html">log</a></li>
+                    <li><a href="https://farmadeus.com/category/logs.html">logs</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Farmadeus</h1>
     <ul>
-        <li><a href="https://farmadeus.com/author/ben-hanna.html">Ben Hanna</a> (4)</li>
+        <li><a href="https://farmadeus.com/author/ben-hanna.html">Ben Hanna</a> (1)</li>
     </ul>
 </section>
 
