Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -11,12 +11,12 @@
         <header id="banner" class="body">
                 <h1><a href="https://farmadeus.com/">Farmadeus </a></h1>
                 <nav><ul>
-                    <li><a href="https://farmadeus.com/category/logs.html">logs</a></li>
+                    <li><a href="https://farmadeus.com/category/logs.html">Logs</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on Farmadeus</h1>
     <ul>
-        <li><a href="https://farmadeus.com/category/logs.html">logs</a> (1)</li>
+        <li><a href="https://farmadeus.com/category/logs.html">Logs</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
