--- a/authors.html
+++ b/authors.html
@@ -11,7 +11,7 @@
         <header id="banner" class="body">
                 <h1><a href="https://farmadeus.com/">Farmadeus </a></h1>
                 <nav><ul>
-                    <li><a href="https://farmadeus.com/category/logs.html">logs</a></li>
+                    <li><a href="https://farmadeus.com/category/logs.html">Logs</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
