Generate Pelican site

--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -38,18 +38,40 @@
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
 </footer><!-- /.post-info -->      <h3>November 21, 2019</h3>
+<p>Capped air prune beds (A, B) with hardware mesh to prevent birds and rodents from stealing seeds.</p>
+<hr>
+<h3>November 20, 2019</h3>
 <p>Planted 11 Shagbark Hickory seeds in air prune bed that was planted with American Hazelnut on November 10, 2019. Covered with straw mulch.</p>
 <p>Removed Antonovka Apple and Siberian Crab Apple from soaking and placed in refrigerator. Packed in moist paper towel due to small seed size.</p>
 <hr>
 <h3>November 19, 2019</h3>
-<p>Planted air prune bed longways as follows.</p>
-<ul>
-<li>10 American Plum</li>
-<li>15 - 20 Ranetka Apple</li>
-<li>10 - 15 ECOS Pear</li>
-<li>25 Americana Dunbars Plum</li>
-</ul>
-<p>Covered with straw mulch.</p>
+<p>Planted air prune bed and covered with straw.</p>
+<table>
+<thead>
+<tr>
+<th>Crop</th>
+<th>Seed Count</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>American Plum</td>
+<td>10</td>
+</tr>
+<tr>
+<td>Ranetka Apple</td>
+<td>15 - 20</td>
+</tr>
+<tr>
+<td>ECOS Pear</td>
+<td>10 - 15</td>
+</tr>
+<tr>
+<td>Americana Dunbars Plum</td>
+<td>25</td>
+</tr>
+</tbody>
+</table>
 <hr>
 <h3>November 17, 2019</h3>
 <p>Started soaking 10 Antonovka Apple seeds and 12 Siberian Crab Apple seeds for scarification.</p>
@@ -86,6 +108,18 @@
 <hr>
 <h3>August 26, 2019</h3>
 <p>Cherry tomatoes have started ripening.</p>
+<hr>
+<h3>August 25, 2019</h3>
+<p>Planted Autumn Magic Aronia Berry (1) and Viking Aronia Berry (2).</p>
+<p><svg width="400" height="300" viewBox="0 0 400 300" xmlns="http://www.w3.org/2000/svg">
+    <text x="300" y="200">1</text>
+&lt;/svg</p>
+<hr>
+<h3>May 11, 2019</h3>
+<p>Planted Keewenaw Serviceberry (1), Wild Goose Plums (2), and Hughes Apple Crab (3).</p>
+<hr>
+<h3>May 9, 2019</h3>
+<p>Planted rhubarb.</p>
     </div><!-- /.entry-content -->
 
   </article>
