--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -116,6 +116,8 @@
     <text x="200" y="60">1</text>
     <text x="300" y="200">2</text>
     <text x="320" y="190">3</text>
+    <text x="250" y="120">5</text>
+    <text x="310" y="110">6</text>
 &lt;/svg</p>
 <hr>
 <h3>May 11, 2019</h3>
