Generate Pelican site

--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -41,11 +41,11 @@
 <p>Capped air prune beds (A, B) with hardware mesh to prevent birds and rodents from stealing seeds.</p>
 <hr>
 <h3>November 20, 2019</h3>
-<p>Planted 11 Shagbark Hickory seeds in air prune bed that was planted with American Hazelnut on November 10, 2019. Covered with straw mulch.</p>
+<p>Planted 11 Shagbark Hickory seeds in air prune bed (A) that was planted with American Hazelnut on November 10, 2019. Covered with straw mulch.</p>
 <p>Removed Antonovka Apple and Siberian Crab Apple from soaking and placed in refrigerator. Packed in moist paper towel due to small seed size.</p>
 <hr>
 <h3>November 19, 2019</h3>
-<p>Planted air prune bed and covered with straw.</p>
+<p>Planted air prune bed (B) and covered with straw.</p>
 <table>
 <thead>
 <tr>
@@ -80,7 +80,7 @@
 <p>Stored 15 Dunstan Chestnuts seed in refrigerator. Packed in peat moss.</p>
 <hr>
 <h3>November 10, 2019</h3>
-<p>Scarified 20 American Hazelnuts with sandpaper and scored lightly with a knife. Planted in air prune bed and covered with straw mulch. </p>
+<p>Scarified 20 American Hazelnuts with sandpaper and scored lightly with a knife. Planted in air prune bed (A) and covered with straw mulch. </p>
 <hr>
 <h3>August 27, 2019</h3>
 <table>
