--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -37,7 +37,11 @@
         </address>
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
-</footer><!-- /.post-info -->      <h3>November 21, 2019</h3>
+</footer><!-- /.post-info -->      <h3>November 23, 2019</h3>
+<p>Air prune beds A (left) and B (right).
+<img alt="farm-log-2019-11-23-00" src="/images/farm-log-2019-11-23-00.jpg"></p>
+<hr>
+<h3>November 21, 2019</h3>
 <p>Capped air prune beds (A, B) with hardware mesh to prevent birds and rodents from stealing seeds.</p>
 <hr>
 <h3>November 20, 2019</h3>
