--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -37,7 +37,11 @@
         </address>
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
-</footer><!-- /.post-info -->      <h3>November 23, 2019</h3>
+</footer><!-- /.post-info -->      <h3>November 24, 2019</h3>
+<p>Planted Sargent's Crab Apple (upper right row), Various Apple (upper left row), ECOS Pear (lower row, right side), and Various Asian Pear (lower row, left side).
+<img src="/images/farm-log-2019-11-24-00.jpg" width="100%" /></p>
+<hr>
+<h3>November 23, 2019</h3>
 <p>Air prune beds A (left) and B (right).
 <img src="/images/farm-log-2019-11-23-00.jpg" width="100%" /></p>
 <hr>
