--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -38,7 +38,19 @@
         </address>
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
-</footer><!-- /.post-info -->      <h3>November 24, 2019</h3>
+</footer><!-- /.post-info -->      <h3>November 26, 2019</h3>
+<p>Looking at potential perennial herbs to introduce to the landscape in the new year.</p>
+<ul>
+<li>Blue Hyssop</li>
+<li>Lovage</li>
+<li>Roman Chamomile</li>
+<li>Russian Tarragon</li>
+<li>Sweet Woodruff</li>
+<li>Winter Savory</li>
+<li>Yarrow</li>
+</ul>
+<hr>
+<h3>November 24, 2019</h3>
 <p>Planted Sargent's Crab Apple (upper right row), Various Apple (upper left row), ECOS Pear (lower row, right side), and Various Asian Pear (lower row, left side).
 <img src="/images/farm-log-2019-11-24-00.jpg" width="100%" /></p>
 <hr>
