Generate Pelican site

--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -38,7 +38,11 @@
         </address>
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
-</footer><!-- /.post-info -->      <h3>November 27, 2019</h3>
+</footer><!-- /.post-info -->      <h3>November 29, 2019</h3>
+<p>Garlic cloves are a bit exposed, covered with a layer of leaves. Lightly pulled on a
+couple cloves and they appear to be well rooted.</p>
+<hr>
+<h3>November 27, 2019</h3>
 <p>Looking at early spring bulb flowers for support around fruit trees.</p>
 <ul>
 <li>Danford Iris</li>
