--- a/archives.html
+++ b/archives.html
@@ -19,6 +19,8 @@
 <h1>Archives for Farmadeus</h1>
 
 <dl>
+    <dt>Sat 11 January 2020</dt>
+    <dd><a href="https://farmadeus.com/farm-log-2020.html">Farm Log 2020</a></dd>
     <dt>Sun 17 November 2019</dt>
     <dd><a href="https://farmadeus.com/farm-log-2019.html">Farm Log 2019</a></dd>
 </dl>
