Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -38,7 +38,10 @@
         </address>
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
-</footer><!-- /.post-info -->      <h3>January 26, 2020</h3>
+</footer><!-- /.post-info -->      <h3>February 8, 2020</h3>
+<p>Checked on the apple seeds in the refrigerator. Planted five Siberian Crab Apple seeds that had sprouted.</p>
+<hr>
+<h3>January 26, 2020</h3>
 <p>The Dunstan Chestnuts have begun to sprout in the refrigerator. One was compromised by mold. Pulled 
 two out and planted in containers.</p>
 <hr>
