Generate Pelican site

--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -120,7 +120,7 @@ couple cloves and they appear to be well rooted.</p>
 </table>
 <hr>
 <h3>November 17, 2019</h3>
-<p>Started soaking 10 Antonovka Apple seeds and 12 Siberian Crab Apple seeds for scarification.</p>
+<p>Started soaking 10 Antonovka Apple seeds and 12 Siberian Crab Apple seeds for stratification.</p>
 <hr>
 <h3>November 11, 2019</h3>
 <p>Stored 15 Dunstan Chestnuts seed in refrigerator. Packed in peat moss.</p>
