--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -38,7 +38,13 @@
         </address>
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
-</footer><!-- /.post-info -->      <h3>February 11, 2020</h3>
+</footer><!-- /.post-info -->      <h3>February 15, 2020</h3>
+<p>Removed the remaining 9 Dunstan Chestnut seeds from the refrigerator and planted in 
+cups.
+<img src="/images/farm-log-2020-02-15-00.jpg" width="100%" /></p>
+<p>Placed 10 American Persimmon and 29 Americana Dunbars Plum seeds in the refrigerator for 
+stratification.</p>
+<h3>February 11, 2020</h3>
 <p>Siberian Crab Apple seedlings have started emerging.
 <img src="/images/farm-log-2020-02-11-00.jpg" width="100%" /></p>
 <p>Removed five Anatovka Apple seeds from refrigerator and planted in a can. Placed 50 Hardy Kiwi, 25 Juneberry, 
