--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -38,7 +38,11 @@
         </address>
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
-</footer><!-- /.post-info -->      <h3>February 15, 2020</h3>
+</footer><!-- /.post-info -->      <h3>February 16, 2020</h3>
+<p>Removed the remaining 5 Anatovka Apple and 6 Siberian Crab Apple seeds from the refrigerator 
+and planted in a can.</p>
+<hr>
+<h3>February 15, 2020</h3>
 <p>Removed the remaining 9 Dunstan Chestnut seeds from the refrigerator and planted in 
 cups.
 <img src="/images/farm-log-2020-02-15-00.jpg" width="100%" /></p>
