Generate Pelican site

--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -189,6 +189,7 @@ couple cloves and they appear to be well rooted.</p>
                         <ul>
                             <li><a href="https://farmadeus.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
+                            <li><a href="https://www.youtube.com/user/benthepoet">YouTube</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
