--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -94,6 +94,7 @@ they're from the Golden Laced Wyandotte hens as I've read Welsummer eggs tend to
                         <ul>
                             <li><a href="https://farmadeus.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
+                            <li><a href="https://www.youtube.com/user/benthepoet">YouTube</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
