--- a/pages/about.html
+++ b/pages/about.html
@@ -38,6 +38,7 @@ mineral sand which is generally deficient in nutrients due to natural leaching.<
                         <ul>
                             <li><a href="https://farmadeus.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
+                            <li><a href="https://www.youtube.com/user/benthepoet">YouTube</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
