--- a/tags.html
+++ b/tags.html
@@ -36,6 +36,7 @@
                         <ul>
                             <li><a href="https://farmadeus.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
+                            <li><a href="https://www.youtube.com/user/benthepoet">YouTube</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
