Generate Pelican site

--- a/farm-log-2019.html
+++ b/farm-log-2019.html
@@ -76,7 +76,7 @@ couple cloves and they appear to be well rooted.</p>
 </ul>
 <hr>
 <h3>November 24, 2019</h3>
-<p>Planted Sargent's Crab Apple (upper right row), Various Apple (upper left row), ECOS Pear (lower row, right side), and Various Asian Pear (lower row, left side).
+<p>Planted Sargent Crabapple (upper right row), Various Apple (upper left row), ECOS Pear (lower row, right side), and Various Asian Pear (lower row, left side).
 <img src="/images/farm-log-2019-11-24-00.jpg" width="100%" /></p>
 <hr>
 <h3>November 23, 2019</h3>
@@ -88,7 +88,7 @@ couple cloves and they appear to be well rooted.</p>
 <hr>
 <h3>November 20, 2019</h3>
 <p>Planted 11 Shagbark Hickory seeds in air prune bed (A) that was planted with American Hazelnut on November 10, 2019. Covered with straw mulch.</p>
-<p>Removed Antonovka Apple and Siberian Crab Apple from soaking and placed in refrigerator. Packed in moist paper towel due to small seed size.</p>
+<p>Removed Antonovka Apple and Siberian Crabapple from soaking and placed in refrigerator. Packed in moist paper towel due to small seed size.</p>
 <hr>
 <h3>November 19, 2019</h3>
 <p>Planted air prune bed (B) and covered with straw.</p>
@@ -120,7 +120,7 @@ couple cloves and they appear to be well rooted.</p>
 </table>
 <hr>
 <h3>November 17, 2019</h3>
-<p>Started soaking 10 Antonovka Apple seeds and 12 Siberian Crab Apple seeds for stratification.</p>
+<p>Started soaking 10 Antonovka Apple seeds and 12 Siberian Crabapple seeds for stratification.</p>
 <hr>
 <h3>November 11, 2019</h3>
 <p>Stored 15 Dunstan Chestnuts seed in refrigerator. Packed in peat moss.</p>
