--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -39,30 +39,34 @@
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
 </footer><!-- /.post-info -->      <h3>March 7, 2020</h3>
-<p>Placed 27 Hybrid Siberian Crab Apple (<em>Malus robusta</em>) in the refrigerator for 
-stratification. Based on research this variety is a cross between Siberian Crab Apple (<em>Malus baccata</em>) 
-and Plumleaf Crab Apple (<em>Malus prunifolia</em>). One source says the common name is Cherry Crab Apple, that's 
+<p>Placed 27 Hybrid Siberian Crabapple (<em>Malus robusta</em>) seeds in the refrigerator for 
+stratification. Based on research this variety is a cross between Siberian Crabapple (<em>Malus baccata</em>) 
+and Plumleaf Crabapple (<em>Malus prunifolia</em>). One source says the common name is Cherry Crabapple, that's 
 what I'll likely refer to it as going forward.</p>
+<p>Progress on the can with Siberian Crabapple, there's five seedlings but one looks like it may not make it.</p>
+<p><img src="/images/farm-log-2020-03-07-00.jpg" width="100%" /></p>
+<p>Progress on the can with Antonovka Apple and Siberian Crabapple.</p>
+<p><img src="/images/farm-log-2020-03-07-01.jpg" width="100%" /></p>
 <hr>
 <h3>March 5, 2020</h3>
-<p>Hyssop seeds have started sprouting. Placed 30 Sargent's Crab Apple and 10 Spice Bush 
+<p>Blue Hyssop seeds have started sprouting. Placed 30 Sargent Crabapple and 10 Spice Bush 
 seeds in the refrigerator for stratification.</p>
 <hr>
 <h3>February 28, 2020</h3>
-<p>Planted around 10 Hyssop seeds in a can.</p>
+<p>Planted around 10 Blue Hyssop seeds in a can.</p>
 <hr>
 <h3>February 24, 2020</h3>
-<p>Placed 15 Winter Gold Crab Apple seeds in the refrigerator for stratification.</p>
+<p>Placed 15 Winter Gold Crabapple seeds in the refrigerator for stratification.</p>
 <hr>
 <h3>February 23, 2020</h3>
 <p>Placed Seaberry and Lingonberry seeds in the refrigerator for stratification. The first 
 two Dunstan Chestnut seedlings are starting to leaf out.</p>
 <p><img src="/images/farm-log-2020-02-23-00.jpg" width="100%" /></p>
-<p>The Siberian Crab Apple seedlings have started sending out their first true leaves.</p>
+<p>The Siberian Crabapple seedlings have started sending out their first true leaves.</p>
 <p><img src="/images/farm-log-2020-02-23-01.jpg" width="100%" /></p>
 <hr>
 <h3>February 16, 2020</h3>
-<p>Removed the remaining 5 Antonovka Apple and 6 Siberian Crab Apple seeds from the refrigerator 
+<p>Removed the remaining 5 Antonovka Apple and 6 Siberian Crabapple seeds from the refrigerator 
 and planted in a can.</p>
 <hr>
 <h3>February 15, 2020</h3>
@@ -73,13 +77,13 @@ cups.
 stratification.</p>
 <hr>
 <h3>February 11, 2020</h3>
-<p>Siberian Crab Apple seedlings have started emerging.
+<p>Siberian Crabapple seedlings have started emerging.
 <img src="/images/farm-log-2020-02-11-00.jpg" width="100%" /></p>
 <p>Removed five Antonovka Apple seeds from refrigerator and planted in a can. Placed 50 Hardy Kiwi, 25 Juneberry, 
 and 25 Saskatoon seeds in the refrigerator for stratification.</p>
 <hr>
 <h3>February 8, 2020</h3>
-<p>Checked on the apple seeds in the refrigerator. Planted five Siberian Crab Apple seeds that had sprouted.</p>
+<p>Checked on the apple seeds in the refrigerator. Planted five Siberian Crabapple seeds that had sprouted.</p>
 <hr>
 <h3>January 26, 2020</h3>
 <p>The Dunstan Chestnuts have begun to sprout in the refrigerator. One was compromised by mold. Pulled 
