Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -40,6 +40,15 @@
 
 </footer><!-- /.post-info -->      <h3>March 15, 2020</h3>
 <p>Placed Arctic Beauty Kiwi (<em>Actinidia kolomikta</em>) seeds in the refrigerator for stratification.</p>
+<p>Checked on the food forest and several trees were damaged by voles over the winter.</p>
+<p>The Methley Plum has been completely girdled. The best thing I can do is try and root as many cuttings 
+as I can get off the tree.</p>
+<p><img src="/images/farm-log-2020-03-15-00.jpg" width="100%" /></p>
+<p>The Northern Prairie Apricot was completely debarked. This plant still has a good root system and 
+has regrown vigorously after being cut down by deer a couple years ago.</p>
+<p><img src="/images/farm-log-2020-03-15-01.jpg" width="100%" /></p>
+<p>The Bartlett Pear, Superior Plum and the Toka Plum were also damaged but I believe these trees may be able 
+to heal and survive.</p>
 <hr>
 <h3>March 7, 2020</h3>
 <p>Placed 27 Hybrid Siberian Crabapple (<em>Malus robusta</em>) seeds in the refrigerator for 
