Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -41,6 +41,7 @@
 </footer><!-- /.post-info -->      <h3>March 20, 2020</h3>
 <p>Started seeds today for Abe Lincoln Tomato, Black Krim Tomato, Black Vernissage Tomato, Chadwick's Cherry Tomato, 
 Pink Bumblebee Tomato, Tadorna Leek, and Lovage.</p>
+<p>Planted some Russian Tarragon seeds in a can.</p>
 <hr>
 <h3>March 16, 2020</h3>
 <p>Salvaged 12 cuttings from the Methley Plum and planted in a container to see if they'll root. 
