--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -40,6 +40,10 @@
 
 </footer><!-- /.post-info -->      <h3>March 22, 2020</h3>
 <p>Started seeds today for Skirret and St. John's Wort.</p>
+<p>Pulled seed potatoes out of the 5-gallon bucket root cellar. Potatoes are in good condition, 
+don't see any that were compromised by mold or rot.</p>
+<p><img src="/images/farm-log-2020-03-22-00.jpg" width="100%" /></p>
+<p><img src="/images/farm-log-2020-03-22-01.jpg" width="100%" /></p>
 <hr>
 <h3>March 20, 2020</h3>
 <p>Started seeds today for Abe Lincoln Tomato, Black Krim Tomato, Black Vernissage Tomato, Chadwick's Cherry Tomato, 
