Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -39,14 +39,19 @@
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
 </footer><!-- /.post-info -->      <h3>March 27, 2020</h3>
-<p>Spread manure on our second potato bed today.</p>
+<p>Spread manure on our second potato bed today. Also shredded a load of leaves and placed that on 
+top of the manure layer.</p>
 <p>Last fall I originally transplanted 4 Buartblack Walnut seedlings at the bottom of our 
 sloping hill. I believe I made a mistake in doing this, as it may create too much shade 
 on the hill and prevent us from successfully growing crops there. With that in mind I moved 
 2 of the seedlings up the hill to establish a canopy as far back as I can. The initial tree/shrub 
 layer in front of the Buartblack Walnut will consist of Americana Dunbars Plum and Chickasaw Plum.</p>
-<p>The two cages in the back of this photo are the Buartblack Walnut seedlings.
-<img src="/images/farm-log-2020-03-27-00.jpg" width="100%" /></p>
+<p>The two cages in the back of this photo are the Buartblack Walnut seedlings.</p>
+<p><img src="/images/farm-log-2020-03-27-00.jpg" width="100%" /></p>
+<p>Last summer I planted out 3 Caucasian Mountain Spinach (<em>Hablitzia Tamnoides</em>) seedlings. Two 
+I have seen any sign from yet, but my strongest seedling is already re-emerging and sending out 
+new shoots.</p>
+<p><img src="/images/farm-log-2020-03-27-01.jpg" width="100%" /></p>
 <hr>
 <h3>March 25, 2020</h3>
 <p>Hauled the first load of manure out of the chicken run and laid on top of a bed 
