Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -50,7 +50,8 @@ layer in front of the Buartblack Walnut will consist of Americana Dunbars Plum a
 <p><img src="/images/farm-log-2020-03-27-00.jpg" width="100%" /></p>
 <p>Last summer I planted out 3 Caucasian Mountain Spinach (<em>Hablitzia Tamnoides</em>) seedlings. Two 
 I have seen any sign from yet, but my strongest seedling is already re-emerging and sending out 
-new shoots.</p>
+new shoots. It'll be nice to have a perennial spinach-like green without the fuss of starting 
+seeds every year.</p>
 <p><img src="/images/farm-log-2020-03-27-01.jpg" width="100%" /></p>
 <hr>
 <h3>March 25, 2020</h3>
