Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -50,6 +50,7 @@ started coming up.</p>
 <p>I've determined that Scarlet Kale is the most hardy variety of kale we've ever grown. The plants 
 from last year are already beginning to send out side shoots. Unlike the Thousand-Headed Kale, the stalks 
 of the Scarlet Kale survived the winter without hardly being scathed.</p>
+<p>The St. John's Wort has started sprouting.</p>
 <hr>
 <h3>March 31, 2020</h3>
 <p>The Victoria Rhubarb the I planted last year is already starting to emerge.</p>
