Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -48,6 +48,23 @@ food crop this year. Below is a picture of what the Skirret seedlings look like.
 <p>Did some pruning on cherry, pear, and apple trees today. Put a large cage around the Alderman Plum, if 
 I don't the deer will make me pay dearly for it.</p>
 <hr>
+<h3>April 25, 2020</h3>
+<p>We discovered a few parsnips from our failed crop last year that wintered over. Rather small but still delicious. 
+Will see if we can get them all the way to seed.</p>
+<p><img src="/images/farm-log-2020-04-25-00.jpg" width="100%" /></p>
+<hr>
+<h3>April 24, 2020</h3>
+<p>Got most of the seedlings outdoors today. Tomatoes are getting big and starting to fall over. Been transplanting them 
+into new containers as needed.</p>
+<p><img src="/images/farm-log-2020-04-24-00.jpg" width="100%" /></p>
+<p>Dunstan Chestnut seedlings are leafing out more.</p>
+<p><img src="/images/farm-log-2020-04-24-01.jpg" width="100%" /></p>
+<p>The Red Russian Kale and Scarlet Kale seedlings have all emerged. Early White Vienna Kohlrabi is taking a while to sprout.</p>
+<p><img src="/images/farm-log-2020-04-24-02.jpg" width="100%" /></p>
+<p>Harvested our first Egyptian Walking Onion of the season. This was from a plant that had divided into three. Cut off the bottom 
+and replanted in another bed.</p>
+<p><img src="/images/farm-log-2020-04-24-03.jpg" width="100%" /></p>
+<hr>
 <h3>April 21, 2020</h3>
 <p>Started a tray of Blauer Speck Kohlrabi, Superschmelz Kohlrabi, Tronchuda Kale, and Turkish Rocket.</p>
 <hr>
