Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -38,7 +38,10 @@
         </address>
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
-</footer><!-- /.post-info -->      <h3>April 28, 2020</h3>
+</footer><!-- /.post-info -->      <h3>April 29, 2020</h3>
+<p>Moved 4 Skirret seedlings from the tray into cups to allow for continued root development.</p>
+<hr>
+<h3>April 28, 2020</h3>
 <p>Was a fairly sunny day today, managed to get all the plants outside again. Transplanted 3 Tadorna Leek 
 seedlings into a bed. We are expecting some freezing temperatures next week so I'll be keeping them covered 
 with a humidity dome for a while.</p>
