Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -40,7 +40,7 @@
 
 </footer><!-- /.post-info -->      <h3>May 4, 2020</h3>
 <p>Tadorna Leeks have adapted well and are surviving overnight freezing temperatures. Blauer Speck Kohlrabi and 
-Superschmelz Kohlrabi are beginning to develop their first true leaves. Beets, carrots, kale, and mustard greens 
+Superschmelz Kohlrabi are beginning to develop their first true leaves. Beets, carrots, kale, lettuce, and mustard greens 
 have all sprouted now in the coldframe.</p>
 <p>The Reliance Grape cutting is showing signs of callusing so I've pulled it from the growing container and placed it 
 in a jar of water to see if it'll develop roots now.</p>
