Generate Pelican site

--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -38,12 +38,14 @@
         </address>
 <p>In <a href="https://farmadeus.com/category/logs.html">Logs</a>.</p>
 
-</footer><!-- /.post-info -->      <h3>May 4, 2020</h3>
+</footer><!-- /.post-info -->      <h3>May 5, 2020</h3>
 <p>Tadorna Leeks have adapted well and are surviving overnight freezing temperatures. Blauer Speck Kohlrabi and 
 Superschmelz Kohlrabi are beginning to develop their first true leaves. Beets, carrots, kale, lettuce, and mustard greens 
 have all sprouted now in the coldframe.</p>
 <p>The Reliance Grape cutting is showing signs of callusing so I've pulled it from the growing container and placed it 
 in a jar of water to see if it'll develop roots now.</p>
+<p>Started a tray with Cocozelle Zucchinni, Table Queen Acorn Squash, Tokyo Blue Squash, Nasturtiums, National Pickling 
+Cucumber, Black Seeded Simpson Lettuce, and Big Boston Lettuce.</p>
 <hr>
 <h3>May 3, 2020</h3>
 <p>Built another leaf bin, this time down by our basement. Transplanted 3 Antonovka Apple seedlings into a 
