--- a/farm-log-2020.html
+++ b/farm-log-2020.html
@@ -40,7 +40,7 @@
 
 </footer><!-- /.post-info -->      <h3>May 19, 2020</h3>
 <p>Transplanted seedlings have all held rather well and I've only seen pest damage, which I attribute to slugs, on one 
-of the Scarlet Kale seedlings.</p>
+of the Scarlet Kale seedlings. Initial plantings of carrots and parsnips appear to all be coming up now.</p>
 <hr>
 <h3>May 18, 2020</h3>
 <p>Received 8 Eastern Prickly Pear Cactus pads in the mail today. Transplanted some kale, kohlrabi, and a tomato plant 
